[package]
name = "stock-cli"
version = "0.1.0"
edition = "2024"
description = "stock price viewing cli that can show for any ticker that the alpha vantage api supports. You can choose how many days to see price quotes. It graphs prices"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
textplots = "=0.8.7"
